3_tier-app/backend.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: backend-deployment 
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: backend-pod
  template:
    metadata:
      labels:
        app: backend-pod 
    spec:
      containers:
        - name: todo-backend
          image: shivamfullstack111/todo-backend:v2 
          ports:
            - containerPort: 5000 
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---

apiVersion: v1 
kind: Service 
metadata:
  name: backend-service 
  namespace: todo-app
spec:
  selector:
    app: backend-pod
  ports:  
    - port: 5000
      targetPort: 5000
  type: NodePort
