3_tier-app/mongodb.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: database-deployment 
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: database-pod
  template:
    metadata:
      labels:
        app: database-pod 
    spec:
      containers:
        - name: todo-database
          image: mongo:latest
          ports:
            - containerPort: 27017 
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /data/db
              name: mongo-storage
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: todo-pvc



---

apiVersion: v1 
kind: Service 
metadata:
  name: database-service 
  namespace: todo-app
spec:
  selector:
    app: database-pod
  ports:  
    - port: 27017
      targetPort: 27017
  type: ClusterIP
